[package]
name = "rust_doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docx-rs = "0.4.15"
serde_json = "1.0.116"
rfd = "0.14.1"
anyhow = "1.0.82"
egui = "0.27.2"
eframe = "0.27.2"
winapi = {version = "0.3.9", features = ["minwindef", "fileapi", "winbase", "winnt"] }
zip = "1.1.1"
windows-result = "0.1.1"
walkdir = "2.5.0"
# zip = "1.1.1"
# windows = "0.56.0"

[dependencies.windows]
version = "0.56.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
